syntax = "proto3";

//  protoc *.proto \
//    --go_out=. \
//    --go_opt=paths=source_relative \
//    --proto_path=.
// or  protoc *.proto --go_out=./ --go-grpc_out=./
package auth;

option go_package="./authpb";

message LoginRequest {
  string username = 1;
  string password = 2 ;
}

message LoginResponse{
  string token = 1;
  string errorMessage = 2;
}

service AuthenticationService{
 rpc Login(LoginRequest) returns (LoginResponse){}
}